# micasa

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  Micasa.sln  README.md  micasa  micasa.py  pyproject.toml
blueprints/: blue-monkey.json  chezmoi.json  curl.json  eza.json  fd.json  fzf.json  git.json  less.json  neovim.json  ripgrep.json  tig.json  uv.json
docker/: README.md  common.mk  config-proxy-certs.sh  prep-proxy-certs.sh  setup-zscaler.sh
docker/amazon-2023/: Dockerfile  Makefile
docker/amazonlinux2023/: Dockerfile
docker/builder/amazon23/: Dockerfile
docker/builder/debian12/: Dockerfile
docker/builder/ubuntu22/: Dockerfile
docker/debian-bookworm/: Dockerfile
docker/debian-trixie/: Dockerfile  Makefile
docker/debian12/: Dockerfile
docker/fedora-latest/: Dockerfile
docker/ubuntu-noble/: Dockerfile  Makefile
docker/ubuntu22/: Dockerfile
docker/ubuntu24/: Dockerfile
docs/: bootstrap-windows.md
micasa/: __init__.py  blueprint.py  cli.py  executable_finder.py  manifest.py  status.py
scripts/: docker-shell.sh
src/: error.rs  main.rs  manifest.rs  stylecop.ruleset  version.rs
src/Micasa.Cli/: Container.cs  Micasa.Cli.csproj  Program.cs
src/commands/: info.rs  install.rs  mod.rs  uninstall.rs
src/micasa/: blueprint.py  cli.py  executable_finder.py  install.py  manifest.py  platform_detector.py  status.py  version_checker.py
src/package_manager/: apt.rs  brew.rs  dnf.rs  github.rs  mod.rs  npm.rs
src/platform/: mod.rs
test/Micasa.UnitTests/: ContainerTests.cs  Makefile  Micasa.UnitTests.csproj  dotnet-tools.json
(+92 files in other folders)
